name:                h-dns
version:             0.1.0.0
synopsis:            DNS Query Tool
description:         Please see README.md
homepage:            https://github.com/rethab/h-dns#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          rethab@protonmail.ch
copyright:           2017 Reto Hablützel
category:            DNS
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Dns
                     , Network.Dns.Serialization
                     , Network.Dns.Printer
  other-modules:       Network.Dns.Types
                     , Network.Dns.Network
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , text >= 1
                     , network >= 2.6
                     , bytestring >= 0.10
                     , binary >= 0.8
                     , binary-bits >= 0.5
  default-language:    Haskell2010

executable h-dns-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , h-dns
                     , text
                     , network
                     , optparse-applicative
  default-language:    Haskell2010
  other-modules:       Options

test-suite h-dns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , h-dns
                     , QuickCheck == 2.8.*
                     , tasty == 0.11.*
                     , tasty-quickcheck == 0.8.*
  other-modules:       Network.Dns.Serialization.Tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rethab/h-dns
